# APIShop

./: README.md  main.py  pyproject.toml
Auth/: router.py
Core/: config.py  hashing.py  security.py
Database/: db.py  models.py  session.py
Products/: models.py  router.py  schema.py  services.py  validator.py
User/: models.py  router.py  schema.py  services.py  validator.py
Users/: models.py  router.py  schema.py  services.py  validator.py
alembic/: env.py
alembic/versions/: 0544b6fede50_.py  0c015482d168_.py  0f7749cc3844_.py  455c08c792ea_.py  a046e36d1e33_.py  b77a4c2de87a_.py  b86f3c333b7c_.py  c5c71dcd1e7f_.py  d8a025747e92_.py  e7d707183401_.py
