[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ts-Pytham <johanbarrio2@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.32"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
argon2 = "^0.1.10"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
